# neuroncli

./: .gitignore  README.md  callback.html  install.sh  neuron.bat  pyproject.toml
neuroncli/: __init__.py  __main__.py  agent.py  auth.py  cli.py  config.py  git_integration.py  ollama_client.py  openrouter_client.py  prompts.py  provider.py  session.py  tools.py  ui.py
tests/: test_agent.py
