[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroncli"
version = "1.1.0"
description = "AI Coding Agent — Claude Code-style CLI powered by free Kimi K2.5 + Ollama"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "zero-x Corporation"},
]
keywords = ["ai", "coding", "agent", "cli", "llm", "kimi", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
neuron = "neuroncli.cli:main"

[tool.setuptools.packages.find]
include = ["neuroncli*"]
